--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "start": "babel-node --presets es2015 server.js",
-    "build": "webpack --config configs/webpack.config.prod.js"
+    "build": "webpack --config configs/webpack.config.prod.js",
+    "build-test": "set NODE_ENV=production&&webpack --config configs/webpack.config.prod.js&&node server.js"
   }
 }
