--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
-    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.29.0",
+    "html-webpack-plugin": "^3.2.0",
     "material-ui": "^0.18.5",
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
@@ -28,13 +26,18 @@
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.3",
     "style-loader": "^0.18.2",
-    "webpack": "^3.0.0",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack": "^4.28.4",
+    "webpack-dev-middleware": "^3.5.1",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "scripts": {
     "start": "babel-node --presets es2015 server.js",
     "build": "webpack --config configs/webpack.config.prod.js",
-    "build-test": "cross-env NODE_ENV=production&&webpack --config configs/webpack.config.prod.js&&node server.js"
+    "build-test": "webpack --config configs/webpack.config.prod.js&&node server.js"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^0.5.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack-cli": "^3.2.1"
   }
 }
