--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.0.0-rc.0",
+    "add": "^2.0.6",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -15,20 +17,20 @@
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^3.2.0",
-    "material-ui": "^0.18.5",
+    "material-ui": "^0.20.2",
     "node-sass": "^4.5.3",
-    "react": "^15.6.1",
+    "react": "^16.8.6",
     "react-color": "^2.13.0",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "redux": "^3.7.1",
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.3",
     "style-loader": "^0.18.2",
     "webpack": "^4.28.4",
     "webpack-dev-middleware": "^3.5.1",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-hot-middleware": "^2.24.3",
+    "yarn": "^1.16.0"
   },
   "scripts": {
     "start": "babel-node --presets es2015 server.js",
