--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "webpack": "^4.28.4",
     "webpack-dev-middleware": "3.7.0",
     "webpack-hot-middleware": "2.25.0",
+    "webpack-merge": "^4.2.1",
     "yarn": "^1.16.0"
   },
   "scripts": {
     "start": "babel-node --presets es2015 server.js",
-    "build": "webpack --config configs/webpack.config.prod.js"
+    "build": "webpack --config config/webpack/prod.config.js"
   },
   "devDependencies": {
     "mini-css-extract-plugin": "^0.5.0",
